--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <header>
     <div class="header-container">
         <div class="logo-container">
-            <img src="pinmeup_logo.jpg" alt="PIN ME UP! Logo">
+            <img src="pinmeup_logo.png" alt="PIN ME UP! Logo">
         </div>
         <div class="shop-title">
             PinMeUP!
@@ -279,8 +279,8 @@
         </div>
         <div class="gallery-grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/150/FF9F68/2A235B?text=KOT" alt="Wzór 1">
-                <div class="product-title">Kot Śmieszek</div>
+                <img src="[PL] fuw __ pełne.png" alt="Wzór 1">
+                <div class="product-title">LOGO FUW</div>
                 <span class="price">5.00 PLN</span>
                 <div class="quantity-control">
                     <span class="quantity-label">Ilość:</span>
@@ -289,8 +289,8 @@
                 <button class="btn-add" onclick="addToCartWithQty('Gotowiec: Kot Śmieszek', 5.00, 'qty-kot')">Dodaj do koszyka</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/150/2A235B/FF9F68?text=PIES" alt="Wzór 2">
-                <div class="product-title">Pieseł</div>
+                <img src="[PL] mimuw __ pełne.png" alt="Wzór 2">
+                <div class="product-title">LOGO MIMUW</div>
                 <span class="price">5.00 PLN</span>
                 <div class="quantity-control">
                     <span class="quantity-label">Ilość:</span>
@@ -299,8 +299,8 @@
                 <button class="btn-add" onclick="addToCartWithQty('Gotowiec: Pieseł', 5.00, 'qty-pies')">Dodaj do koszyka</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/150/FF9F68/FFFFFF?text=LOGO" alt="Wzór 3">
-                <div class="product-title">Logo Uczelni</div>
+                <img src="[PL] wchem.png" alt="Wzór 3">
+                <div class="product-title">LOGO WCH</div>
                 <span class="price">5.00 PLN</span>
                 <div class="quantity-control">
                     <span class="quantity-label">Ilość:</span>
@@ -562,3 +562,4 @@
 
 </body>
 </html>
+
