--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
         </div>
         <div class="sidebar-box">
             <div class="sidebar-title">💬 GŁOS LUDU (OPINIE)</div>
-            <div class="review">"Kupiłem Dubajską Czekoladę, żeby zaimponować na Tinderze. Zadziałało." <span class="review-author">~Marek, III rok</span></div>
-            <div class="review">"Selfie z Gwiazdą Wydziału? Wchodzę w to!" <span class="review-author">~Fanka</span></div>
+            <div class="review">"Kupiłem Dubajską Czekoladę, żeby zaimponować na ustnym z algebry. Zadziałało." <span class="review-author">~Marek, III rok</span></div>
+            <div class="review">"Selfie z Gwiazdą Wydziału? Wchodzę w to!" <span class="review-author">~Fanka Turzyna</span></div>
             <div class="review">"Przypinka Pride wygląda sztos na plecaku. Polecajka." <span class="review-author">~Alex</span></div>
             <div class="review">"Blindbox trafił mi się idealny. Chyba czytają w myślach." <span class="review-author">~Anonim</span></div>
             <div class="review">"Kupiłem dla beki, noszę nieironicznie." <span class="review-author">~Seba</span></div>
@@ -507,7 +507,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 <script>
-    const ACCESS_KEY = "TWOJ_KLUCZ_WEB3FORMS_PRO"; 
+    const ACCESS_KEY = "8a7e51bf-8aab-4ee7-b678-7ae82f55c7c6"; 
 
     let cart = [];
 
@@ -685,7 +685,7 @@
 
     // --- WYSYŁKA ---
     async function checkout() {
-        if (!ACCESS_KEY || ACCESS_KEY === "8a7e51bf-8aab-4ee7-b678-7ae82f55c7c6") { 
+        if (!ACCESS_KEY || ACCESS_KEY === "TWOJ_KLUCZ_WEB3FORMS_PRO") { 
             alert("BŁĄD: Nie wpisałeś klucza Web3Forms w kodzie!"); 
             return; 
         }
