--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <nav class="main-menu" id="navMenu">
             <a href="#acc-custom" class="menu-link">Kreator</a>
             <a href="#acc-logo" class="menu-link">Loga</a>
-            <a href="#acc-fuw" class="menu-link" style="color: #0984e3;">FUW Vibe</a>
+            <a href="#acc-fuw" class="menu-link" style="color: #f37034;">FUW Vibe</a>
             <a href="#acc-fame" class="menu-link gold">BADGE OF FAME 🏆</a>
             <a href="#acc-memy" class="menu-link">Memy</a>
             <a href="#acc-xmas" class="menu-link highlight">XMAS 🎄</a>
@@ -1038,4 +1038,5 @@
 
 </body>
 </html>
+
 
