--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             { file: "wmed (54).png", name: "lesbian" },
                             { file: "wmed (55).png", name: "gay" },
                             { file: "wmed (56).png", name: "trans" },
-                            { file: "begaydocrimes.png", name: "#begaydocrimes" }
+                            { file: "begaydocrime.png", name: "#begaydocrimes" }
                         ];
         
                         prideItems.forEach((item, i) => {
@@ -1038,5 +1038,6 @@
 
 </body>
 </html>
+
 
 
