Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                             <div class="card" style="border: 1px solid #fab1a0;">
                                 <img src="${item.file}" onclick="openLightbox(this.src)" onerror="this.src='https://via.placeholder.com/90?text=XMAS'">
                                 <h3>${item.name}</h3>
-                                <span class="price">6.00 PLN</span>
+                                <span class="price">5.00 PLN</span>
                                 <div class="qty-box"><input type="number" id="qty_xmas_n_${i}" class="qty-input" value="1"></div>
                                 <button class="btn-add" style="background-color: #27ae60;" onclick="addItem('${item.name}', 6, 'qty_xmas_n_${i}')">DODAJ</button>
                             </div>`);
@@ -633,7 +633,7 @@
                 <span style="display: flex; align-items: center; gap: 10px;">
                     BORDERKICIA 
                     <span style="font-size: 11px; font-weight: normal; opacity: 0.6; font-style: italic; letter-spacing: 1px;">
-                        ✨ slay details ✨
+                        ✨ slay ✨
                     </span>
                 </span>
                 <i class="fa-solid fa-chevron-down"></i>
@@ -660,7 +660,7 @@
                             <div class="card">
                                 <img src="${item.file}" onclick="openLightbox(this.src)" onerror="this.src='https://via.placeholder.com/150'">
                                 <h3>${item.name}</h3>
-                                <span class="price">6.00 PLN</span>
+                                <span class="price">5.00 PLN</span>
                                 <div class="qty-box"><input type="number" id="qty_pin_${i}" class="qty-input" value="1"></div>
                                 <button class="btn-add" onclick="addItem('${item.name}', 6, 'qty_pin_${i}')">DODAJ</button>
                             </div>`);
@@ -1038,6 +1038,7 @@
 
 </body>
 </html>
+
 
 
 
