--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             {name: "FUW Skrót 2", file: "fuw __ skrót.png"},
                             {name: "Pin Me Up", file: "pinmeup (3).png"},
                             {name: "Wydział Biologii", file: "wb.png"},
-                            {name: "Wydział Medyczny", file: "wmed (20).png"},
+                            {name: "Fuw baloon", file: "wmed (20).png"},
                             {name: "QuantMol", file: "quantmol.png"}
                         ];
                         logos.forEach((item, i) => {
@@ -1038,6 +1038,7 @@
 
 </body>
 </html>
+
 
 
 
