--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
                             { file: "[EN] fuw __ pełne.png", name: "logo wydziału #1 eng" },
                             { file: "fuw __ skrót (2).png", name: "logo wydziału #2" },
                             { file: "fuw __ skrót (3).png", name: "logo wydziału #3" },
+                            { file: "wmed (20).png", name: "Fuw baloon"},
                             { file: "wmed (35).png", name: "tak, umiem pisać xi" },
                             { file: "wmed (24).png", name: "wiara czyni cuda" },
                             { file: "wmed (27).png", name: "trywialne" },
@@ -1046,6 +1047,7 @@
 
 </body>
 </html>
+
 
 
 
