--- a/index.html
+++ b/index.html
@@ -400,7 +400,8 @@
 
         <div id="acc-fuw" class="accordion-item" style="border-left-color: #f37034;">
             <div class="accordion-header" onclick="toggleAcc(this)">
-                <span>🪐 FUW VIBE</span>
+                <span style="display: flex; align-items: center; gap: 10px; color: #f37034;">
+                🪐 FUW VIBE
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
@@ -1047,6 +1048,7 @@
 
 </body>
 </html>
+
 
 
 
