--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
         <div id="acc-fuw" class="accordion-item" style="border-left-color: #f37034;">
             <div class="accordion-header" onclick="toggleAcc(this)">
                 <span style="display: flex; align-items: center; gap: 10px; color: #f37034;">
-                🪐 FUW VIBE
+                    🪐 FUW VIBE
+                </span>
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
@@ -416,7 +417,7 @@
         
                 <div class="grid">
                     <script>
-                        // WPISZ TUTAJ PLIKI DLA SEKCJI FUW
+                        // NOWA LISTA FUW
                         const fuwItems = [
                             { file: "[PL] fuw __ pełne.png", name: "logo wydziału #1" },
                             { file: "[EN] fuw __ pełne.png", name: "logo wydziału #1 eng" },
@@ -426,6 +427,8 @@
                             { file: "wmed (35).png", name: "tak, umiem pisać xi" },
                             { file: "wmed (24).png", name: "wiara czyni cuda" },
                             { file: "wmed (27).png", name: "trywialne" },
+                            { file: "wmed (36).png", name: "i'm just a physicist" },
+                            { file: "wmed (37).png", name: "i'm just a physicist (bow edition)" },
                             { file: "wmed (26).png", name: "załóżmy, że jestem kulą" },
                             { file: "fizykburger.png", name: "certified fan of fizykburger" },
                             { file: "wmed (33).png", name: "szrodinger" },
@@ -1064,6 +1067,7 @@
 
 </body>
 </html>
+
 
 
 
