--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                             { file: "wmed (35).png", name: "tak, umiem pisać xi" },
                             { file: "wmed (24).png", name: "wiara czyni cuda" },
                             { file: "wmed (27).png", name: "trywialne" },
-                            { file: "wmed (36).png", name: "i\'m just a physicist" },
-                            { file: "wmed (37).png", name: "i\'m just a physicist (bow edition)" },
+                            { file: "wmed (36).png", name: "im just a physicist" },
+                            { file: "wmed (37).png", name: "im just a physicist (bow edition)" },
                             { file: "wmed (26).png", name: "załóżmy, że jestem kulą" },
                             { file: "fizykburger.png", name: "certified fan of fizykburger" },
                             { file: "wmed (33).png", name: "szrodinger" },
@@ -633,7 +633,7 @@
                             { file: "wmed (54).png", name: "lesbian" },
                             { file: "wmed (55).png", name: "gay" },
                             { file: "wmed (56).png", name: "trans" },
-                            { file: "begaydocrime.png", name: "#begaydocrimes" }
+                            { file: "begaydocrime.png", name: "#begaydocrime" }
                         ];
         
                         prideItems.forEach((item, i) => {
@@ -699,8 +699,8 @@
                     <script>
                         // NAPRAWIONA LISTA (zabezpieczone apostrofy)
                         const borderItems = [
-                            { file: "wmed (36).png", name: "i\'m just a physicist" },
-                            { file: "wmed (37).png", name: "i\'m just a physicist (bow edition)" },
+                            { file: "wmed (36).png", name: "im just a physicist" },
+                            { file: "wmed (37).png", name: "im just a physicist (bow edition)" },
                             { file: "wmed (38).png", name: "borderkicia" },
                             { file: "wmed (39).png", name: "mONSTER" },
                             { file: "wmed (40).png", name: "zip zip zap zap" },
@@ -1134,6 +1134,7 @@
 
 </body>
 </html>
+
 
 
 
