--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <span class="event-highlight">📦 Odbiór zamówień </span> 
         <br style="display:none;" class="mobile-break">
         <span class="event-highlight">📸 Fotobudka świąteczna do zdjęć </span>
-        <span style="color:yellow; text-shadow:0 1px 2px black;">🎓 17.12 - ZDJĘCIE Z DZIEKANEM TURZYŃSKIM!!!</span>
+        <span style="color:yellow; text-shadow:0 1px 2px black;">🎓 17.12 - ZRÓB SOBIE ZDJĘCIE Z DZIEKANEM TURZYŃSKIM!!!</span>
     </div>
 </div>
 
@@ -1153,6 +1153,7 @@
 
 </body>
 </html>
+
 
 
 
