--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <a href="#acc-xmas" class="menu-link highlight">XMAS 🎄</a>
             <a href="#acc-pride" class="menu-link">#PRIDE 🏳️‍🌈</a>
             <a href="#acc-blind" class="menu-link">Blindbox</a>
-            <a href="#acc-border" class="menu-link">Borderkicia</a>
+            <a href="#acc-border" class="menu-link">Borderkicia & friends</a>
             <a href="#acc-prestige" class="menu-link">Prestiż</a>
             <a href="#acc-inne" class="menu-link">Inne</a>
         </nav>
@@ -687,7 +687,7 @@
         <div id="acc-border" class="accordion-item" style="border-left-color: #9b59b6;">
             <div class="accordion-header" onclick="toggleAcc(this)">
                 <span style="display: flex; align-items: center; gap: 10px;">
-                    BORDERKICIA 
+                    BORDERKICIA & friends
                     <span style="font-size: 11px; font-weight: normal; opacity: 0.6; font-style: italic; letter-spacing: 1px;">
                         ✨ slay ✨
                     </span>
@@ -708,7 +708,9 @@
                             { file: "wmed (42).png", name: "jest we mnie BESTIA" },
                             { file: "wmed (43).png", name: "bojem siem kombiemt" },
                             { file: "wmed (44).png", name: "eepy sleepy" },
-                            { file: "wmed (45).png", name: "zakazane słowa" }
+                            { file: "wmed (45).png", name: "zakazane słowa" },
+                            { file: "kapiabra_książkara.png", name: "kapibara książkara" },
+                            { file: "dontworrybecappy.png", name: "dont worry be cappy" }
                         ];
         
                         borderItems.forEach((item, i) => {
@@ -1153,6 +1155,7 @@
 
 </body>
 </html>
+
 
 
 
