--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                             { file: "wmed (43).png", name: "bojem siem kombiemt" },
                             { file: "wmed (44).png", name: "eepy sleepy" },
                             { file: "wmed (45).png", name: "zakazane słowa" },
-                            { file: "kapiabra_książkara.png", name: "kapibara książkara" },
+                            { file: "kapibara_książkara.png", name: "kapibara książkara" },
                             { file: "dontworrybecappy.png", name: "dont worry be cappy" }
                         ];
         
@@ -747,7 +747,8 @@
                 </div>
                 <div class="grid">
                     <div class="card prestige">
-                        <img src="czekolada.png" alt="Dubaj" onclick="openLightbox(this.src)">
+                        <img src="dubajska_czekolada.png" alt="Dubaj" onclick="openLightbox(this.src)">
+                        <s> 150 PLN</s>
                         <h3>Dubajska Czekolada (prosto z Dubaju) </h3>
                         <span class="price">15.00 PLN</span>
                         <div class="qty-box"><input type="number" id="qty_dubaj" class="qty-input" value="1"></div>
@@ -756,6 +757,7 @@
                     <div class="card prestige">
                         <img src="labubu.png" alt="Labubu" onclick="openLightbox(this.src)">
                         <h3>Labubu </h3>
+                        <s> 500 PLN</s>
                         <span class="price">20.00 PLN</span>
                         <div class="qty-box"><input type="number" id="qty_labubu" class="qty-input" value="1"></div>
                         <button class="btn-add" onclick="addItem('Labubu Rare', 20, 'qty_labubu')">BIORĘ</button>
@@ -1155,6 +1157,7 @@
 
 </body>
 </html>
+
 
 
 
