--- a/index.html
+++ b/index.html
@@ -637,7 +637,11 @@
                         const xmas = [
                             {name: "Merry Christmas", file: "wmed (46).png"}, 
                             {name: "Meowy Christmas", file: "wmed (47).png"},
-                            {name: "Christmas Pain", file: "wmed (48).png"}
+                            {name: "Christmas panic", file: "wmed (48).png"},
+                            {name: "stan splątany", file: "stan_splątany.png"},
+                            {name: "Santa Paws", file: "santa_paws.png"},
+                            {name: "purrfect lights", file: "purrfect_lights.png"},
+                            {name: "the only gift i want", file: "alliwantforchristmas.png"}
                         ];
         
                         xmas.forEach((item, i) => {
@@ -1213,3 +1217,4 @@
 
 </body>
 </html>
+
