--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             text-align: center; padding: 0 10px; box-sizing: border-box;
         }
         @keyframes gradientMove { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-        .event-highlight { background: rgba(0,0,0,0.2); padding: 1px 6px; border-radius: 4px; margin: 0 3px; display: inline-block; white-space: nowrap; }
+        .event-highlight { background: rgba(0,0,0,0.2); padding: 2px 6px; border-radius: 4px; margin: 0 3px; display: inline-block; }
 
         /* --- 2. NOWY BANER (SALE) --- */
         .promo-banner {
@@ -129,8 +129,7 @@
         /* --- MOBILE FIXES --- */
         @media (max-width: 900px) {
             :root {
-                /* TUTAJ ZMIENIAMY ODSTĘP NA TELEFONIE - 20px W DÓŁ */
-                --top-gap: 20px; 
+                --top-gap: 0px; 
             }
 
             header { 
@@ -1212,6 +1211,7 @@
 
 </body>
 </html>
+
 
 
 
