--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         /* --- 1. STARY BANER (EVENT) --- */
         .event-banner {
             position: fixed; 
-            top: var(--top-gap); /* Używamy zmiennej odstępu */
+            top: var(--top-gap); 
             left: 0; width: 100%; 
             height: var(--banner-1-height); 
             background: linear-gradient(90deg, #ff0055, #ff7979, #f9ca24); 
@@ -454,7 +454,9 @@
                             {name: "Pin Me Up", file: "pinmeup (3).png"},
                             {name: "Wydział Biologii", file: "wb.png"},
                             {name: "Fuw baloon", file: "wmed (20).png"},
-                            {name: "QuantMol", file: "quantmol.png"}
+                            {name: "QuantMol", file: "quantmol.png"},
+                            {name: "santa SKuNKs", file: "santa_skunks.png"},
+                            {name: "SKuNKs", file: "skunks.png"}
                         ];
                         logos.forEach((item, i) => {
                             document.write(`
@@ -1211,6 +1213,7 @@
 
 </body>
 </html>
+
 
 
 
