Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                             {name: "Pin Me Up", file: "pinmeup (3).png"},
                             {name: "Wydział Biologii", file: "wb.png"},
                             {name: "Fuw baloon", file: "wmed (20).png"},
+                            {name: "Wydział Medyczny", file: "wmed.png"},
                             {name: "QuantMol", file: "quantmol.png"},
                             {name: "santa SKuNKs", file: "santa_skunks.png"},
                             {name: "SKuNKs", file: "skunks.png"}
@@ -1213,6 +1214,7 @@
 
 </body>
 </html>
+
 
 
 
