--- a/index.html
+++ b/index.html
@@ -767,6 +767,8 @@
                             { file: "wmed (54).png", name: "lesbian" },
                             { file: "wmed (55).png", name: "gay" },
                             { file: "wmed (56).png", name: "trans" },
+                            { file: "pan.png", name: "pan" },
+                            { file: "aseks.png", name: "aseks" },
                             { file: "begaydocrime.png", name: "#begaydocrime" }
                         ];
         
@@ -842,6 +844,7 @@
                             { file: "wmed (43).png", name: "bojem siem kombiemt" },
                             { file: "wmed (44).png", name: "eepy sleepy" },
                             { file: "wmed (45).png", name: "zakazane słowa" },
+                            { file: "meowbucks.png", name: "mmm kawusia" },
                             { file: "kapibara_książkara.png", name: "kapibara książkara" },
                             { file: "dontworrybecappy.png", name: "dont worry be cappy" }
                         ];
@@ -1326,6 +1329,7 @@
 
 </body>
 </html>
+
 
 
 
