--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <a href="#acc-xmas" class="menu-link highlight">XMAS 🎄</a>
             <a href="#acc-pride" class="menu-link">#PRIDE 🏳️‍🌈</a>
             <a href="#acc-blind" class="menu-link">Blindbox</a>
-            <a href="#acc-border" class="menu-link">Borderkicia & friends</a>
+            <a href="#acc-border" class="menu-link">Borderkicia and friends</a>
             <a href="#acc-prestige" class="menu-link">Prestiż</a>
             <a href="#acc-inne" class="menu-link">Inne</a>
         </nav>
@@ -578,7 +578,7 @@
         <div id="acc-border" class="accordion-item" style="border-left-color: #9b59b6;">
             <div class="accordion-header" onclick="toggleAcc(this)">
                 <span style="display: flex; align-items: center; gap: 10px;">
-                    BORDERKICIA & friends
+                    BORDERKICIA and friends
                     <span style="font-size: 11px; font-weight: normal; opacity: 0.6; font-style: italic; letter-spacing: 1px;">
                         ✨ slay ✨
                     </span>
@@ -1082,3 +1082,4 @@
 
 </body>
 </html>
+
